--- a/WebSellBuy/WebSellBuy/Views/Layout/_LayoutPageBase.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Layout/_LayoutPageBase.cshtml
@@ -140,12 +140,12 @@
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="signInBtn congMagUs"><a href="/Manager" class="cssLayoutLocation" onclick="">Менеджер</a></li>
+                        <li class="signInBtn congMagUs"><a href="/Manager" target="_blank" class="cssLayoutLocation" onclick="">Менеджер</a></li>
                     </ul>
                 }
                 else
                 {
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right signInOutStyle">
                         <li class="signInBtn"><strong class="cssLayoutLocation" onclick="SinIn_SIgnOut_RegisterUser_click(1)">Войти</strong></li>
                         <li class="signInBtn"><strong class="cssLayoutLocation" onclick="SinIn_SIgnOut_RegisterUser_click(2)">Регистрация</strong></li>
                     </ul>
