--- a/WebSellBuy/WebSellBuy/Views/Manager/Manager.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Manager/Manager.cshtml
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Manager</title>
 
- 
+  
 
     <!-- Bootstrap core CSS -->
 
@@ -24,8 +24,11 @@
     <!-- Plugin CSS -->
     <link href="~/Content/css/ManagerStyle/datatables/dataTables.bootstrap4.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
-
+    <script src="~/Content/js/jquery/jquery.js"></script>
+    <script src="~/Content/js/allSite/commonJs.js"></script>
+    <script src="~/Content/js/allSite/popup.js"></script>
     <link href="~/Content/css/ManagerStyle/sb-admin.css" rel="stylesheet" />
+   
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation -->
@@ -40,7 +43,7 @@
                     <a class="nav-link" href="#">
                         <i class="fa fa-fw fa-dashboard"></i>
                         <span class="nav-link-text">
-                            Dashboard
+                            Менеджер магазинов
                         </span>
                     </a>
                 </li>
@@ -48,7 +51,7 @@
                     <a class="nav-link" href="#">
                         <i class="fa fa-fw fa-area-chart"></i>
                         <span class="nav-link-text">
-                            Charts
+                            Категории
                         </span>
                     </a>
                 </li>
@@ -56,7 +59,7 @@
                     <a class="nav-link" href="#">
                         <i class="fa fa-fw fa-table"></i>
                         <span class="nav-link-text">
-                            Tables
+                            Продукты
                         </span>
                     </a>
                 </li>
@@ -257,14 +260,14 @@
     <div class="content-wrapper">
         <div class="container-fluid">
             <!-- Breadcrumbs -->
-            <ol class="breadcrumb">
+            @*<ol class="breadcrumb">
                 <li class="breadcrumb-item">
                     <a href="#">Dashboard</a>
                 </li>
                 <li class="breadcrumb-item active">My Dashboard</li>
-            </ol>
+            </ol>*@
             @{
-                Html.RenderPartial("test");
+                Html.RenderPartial("ManagerShops");
             }
         </div>
         <!-- /.container-fluid -->
@@ -273,7 +276,7 @@
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
-                <small>Copyright &copy; Your Website 2017</small>
+                @*<small>Copyright &copy; Your Website 2017</small>*@
             </div>
         </div>
     </footer>
