--- a/WebSellBuy/WebSellBuy/Views/Manager/ManagerShops.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Manager/ManagerShops.cshtml
@@ -21,7 +21,13 @@
     </ul>
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="tab1">
-            Важный элемент цивилизации ардритов с планеты Энтеропия.
+           Здесь вы сможете:
+                Создать магазин<br>
+                Удалить магазин<br>
+                Изменить информацыю магазина<br>
+                Поиск магазина по разным параметрам<br>
+                Посмотреть все магазины <br>
+                При создание магазина важно желательно всю информацию 
         </div>
         <div role="tabpanel" class="tab-pane" id="tab2">
             <div class="blockCreateShop">
@@ -29,13 +35,48 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3 well blockCreate">
-                                <h3 class="text-center">Добавить магазин</h3>
+                                <h3 class="text-center">Создать магазин</h3>
                               
                                     <div class="col-xs-12">
                                         <div class="form-group">
                                             <input id="nameShop" type="text" class="form-control" placeholder="Введите название магазина" />
                                         </div>
                                     </div>
+                                <div class="col-xs-12">
+                                    <div class="form-group">
+                                        <select class="turnintodropdown_demo2">
+                                            <option>Пожалуйста, выберите категорию:</option>
+                                            <option>Австралия</option>
+                                            <option>Бельгия</option>
+                                            <option>Болгария</option>
+                                            <option>Хорватия</option>
+                                            <option>Кипр</option>
+                                            <option>Чехия</option>
+                                            <option>Дания</option>
+                                            <option>Эстония</option>
+                                            <option>Финляндия</option>
+                                            <option>Франция</option>
+                                            <option>Германия</option>
+                                            <option>Греция</option>
+                                            <option>Венгрия</option>
+                                            <option>Ирландия</option>
+                                            <option>Италия</option>
+                                            <option>Латвия</option>
+                                            <option>Литва</option>
+                                            <option>Люксембург</option>
+                                            <option>Мальта</option>
+                                            <option>Нидерланды</option>
+                                            <option>Польша</option>
+                                            <option>Португалия</option>
+                                            <option>Румыния</option>
+                                            <option>Словакия</option>
+                                            <option>Словения</option>
+                                            <option>Испания</option>
+                                            <option>Швеция</option>
+                                            <option>Великобритания</option>
+                                        </select>
+                                    </div>
+                                </div>
                                     <div class="col-xs-12">
                                         <div class="form-group">
                                             <input id="passShop" type="password" class="form-control" value="samplepass" />
