--- a/WebSellBuy/WebSellBuy/Content/css/web/infoProfile.css
+++ b/WebSellBuy/WebSellBuy/Content/css/web/infoProfile.css
@@ -25,7 +25,7 @@ body {
 	  font-weight: normal;
 	}
 
-	.form-control {
+	.form-Profile {
 	  position: relative;
 	  font-size: 16px;
 	  height: auto;
@@ -37,18 +37,18 @@ body {
 		}
 	}
 
-	input[type="text"] {
+	.form-Profile[type="text"] {
 	  margin-bottom: -1px;
 	  border-bottom-left-radius: 0;
 	  border-bottom-right-radius: 0;
 	}
 
-	input[type="password"] {
+	.form-Profile[type="password"] {
 	  margin-bottom: 20px;
 	  border-top-left-radius: 0;
 	  border-top-right-radius: 0;
 	}
-.form-control{
+.form-Profile{
     width:75% !important;
     float:left !important;
 }
@@ -113,4 +113,9 @@ body {
 
 .btnSaveInfo{
     display:none;
+}
+.btnSignInPrifile{
+    position:absolute;
+    top:6%;
+    right:3px;
 }
