--- a/WebSellBuy/WebSellBuy/Views/Authentication/Authorization.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Authentication/Authorization.cshtml
@@ -15,6 +15,7 @@
     <link href="~/Content/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Content/js/AuthenticationJs/SignIn_SignUp.js"></script>
     <link href="~/Content/css/allPages/loader.css" rel="stylesheet" />
+    <script src="~/Content/js/allSite/popup.js"></script>
 </head>
 <body>
 
