--- a/WebSellBuy/WebSellBuy/Views/Authentication/SignIn.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Authentication/SignIn.cshtml
@@ -13,6 +13,7 @@
     <script src="~/Content/js/AuthenticationJs/SignIn_SignUp.js"></script>
     <link href="~/Content/css/AuthenticationStyle/authentication.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Content/js/allSite/popup.js"></script>
 </head>
 <body>
     <div id="fullscreen_bg" class="fullscreen_bg" />
