--- a/WebSellBuy/WebSellBuy/Views/Layout/_LayoutPageBase.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Layout/_LayoutPageBase.cshtml
@@ -117,7 +117,7 @@
                                                 <p class="text-left"><strong class="SurnameLastNameInfo"></strong></p>
                                                 <p class="emailProfileInfo text-left small">correoElectronico@email.com</p>
                                                 <p class="text-left">
-                                                    <a href="UserProfile" class="btn btn-primary btn-block btn-sm">Изменить</a>
+                                                    <a href="#myModal" onclick="ClickUserProfileLink()"  class="btn btn-primary btn-block btn-sm" data-toggle="modal">Изменить</a>
                                                 </p>
                                             </div>
                                         </div>
@@ -179,7 +179,7 @@
                 <!-- Заголовок модального окна -->
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">Для входа в Manager введите свой пароль</h4>
+                    <h4 class="modal-title">Для перехода введите свой пароль</h4>
                 </div>
                 <!-- Основное содержимое модального окна -->
                 <div class="modal-body">
