add next changes

--- a/WebSellBuy/WebSellBuy/Views/Authentication/Authorization.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Authentication/Authorization.cshtml
@@ -16,6 +16,7 @@
     <script src="~/Content/js/AuthenticationJs/SignIn_SignUp.js"></script>
     <link href="~/Content/css/allPages/loader.css" rel="stylesheet" />
     <script src="~/Content/js/allSite/popup.js"></script>
+    <script src="~/Content/js/allSite/commonJs.js"></script>
 </head>
 <body>
 
