--- a/WebSellBuy/WebSellBuy/Content/css/ManagerStyle/allManager.css
+++ b/WebSellBuy/WebSellBuy/Content/css/ManagerStyle/allManager.css
@@ -7,3 +7,20 @@
     right: 10px;
     top: 3px;
 }
+
+#categoryForManager {
+    color: #777;
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
+    background: #fff url(../../../../Content/images/selectImage/select-arrow-open.png) 98% center no-repeat;
+    display: block;
+    border: 1px solid #ccc;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
