--- a/WebSellBuy/WebSellBuy/Views/Authentication/SignIn.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Authentication/SignIn.cshtml
@@ -14,6 +14,7 @@
     <link href="~/Content/css/AuthenticationStyle/authentication.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Content/js/allSite/popup.js"></script>
+    <script src="~/Content/js/allSite/commonJs.js"></script>
 </head>
 <body>
     <div id="fullscreen_bg" class="fullscreen_bg" />
