added next change and fix remove shop update database row

--- a/WebSellBuy/WebSellBuy/Content/css/ManagerStyle/allManager.css
+++ b/WebSellBuy/WebSellBuy/Content/css/ManagerStyle/allManager.css
@@ -32,7 +32,10 @@
 }
 
 .logoMyShop {
-    width: 100px;
+    width: 70px;
+    height: 50px;
+    border-radius: 10px;
+    border: 2px solid;
 }
 
 .badgeImage {
@@ -42,7 +45,7 @@
 .badgeNameShop {
     text-align: center;
     width: 50%;
-    height: 63px;
+    height: 40px;
     float: left;
     display: table;
     text-align: center;
@@ -53,16 +56,18 @@
 
   font-family: Garamond, serif;
 line-height: 1em;
-color: sienna;
+color: aliceblue;
 font-weight:bold;
 font-size: 37px;
 text-shadow:0px 0px 0 rgb(231,231,231),1px 0px 0 rgb(216,216,216),2px 0px 0 rgb(202,202,202),3px 0px 0 rgb(187,187,187),4px 0px 0 rgb(173,173,173),5px 0px 0 rgb(158,158,158), 6px 0px 0 rgb(144,144,144),7px 0px 6px rgba(0,0,0,0.6),7px 0px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2)
 }
 .styleBlockShop{
-    background:aliceblue;
+    background:lightgray;
     margin:3px;
 }
-
+.styleBlockShop:hover{
+    background:currentColor;
+}
 a.button7 {
   font-weight: 700;
   color: white;
@@ -79,5 +84,10 @@ a.button7:hover { background: rgb(53, 167, 110); }
 a.button7:active {
   background: rgb(33,147,90);
   box-shadow: 0 3px rgb(33,147,90) inset;
+}
+
+.blockAllShops{
+    width:60%;
+    margin:auto;
 }
 /*End style all shops*/
