--- a/WebSellBuy/WebSellBuy/Views/Manager/ManagerShops.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Manager/ManagerShops.cshtml
@@ -77,7 +77,7 @@
             </div>
 
         </div>
-        <div role="tabpanel" class="tab-pane" id="tab3">
+        <div role="tabpanel" class="tab-pane blockAllShops" id="tab3">
             <div class="clsAllMyShops">
                 <ul class="list-group" id="MyShops">
                     @*<li class="list-group-item styleBlockShop">
